...
                decoration: BoxDecoration(
                  color: context.colors.primary,
                  shape: BoxShape.circle,
                  border: Border.all(color: Colors.black, width: 3),
                ),
                child: Text(
                  'VS',
                  style: context.text.titleSmall?.copyWith(color: Colors.white, fontWeight: FontWeight.w800, letterSpacing: 0.5),
                ),
              ),
            ),
          ),
          _BattleHeader(battle: battle, nav: widget.nav),
...
